--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,37 @@
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
   }
+  h1 {
+    font-family: "Times New Roman", Serif;
+    color: #FFFFFF ;
+    background-color:#000000  ;
+    border-style:none ;
+    padding: 15px;
+    }
+    .footer {
+      background-color: #D9D9D9 ;
+      color: #000000;
+    }
+
+    .f1::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+    
+    [class*="col-"] {
+      float: left;
+      padding: 15px;
+    }
+
+    .form {
+      padding: 5px;
+      font-size: large;
+      background-color: #F1FF1D ;
+      color: #ffffff;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+    
+    .form :hover {
+      background-color: #FF5E1D ;
+    }
