--- a/js/cssjs.css
+++ b/js/cssjs.css
@@ -83,11 +83,12 @@ body {
     color: #888;
   }
   
-  /* New styles for error messages */
+   /* New styles for error messages */
   
   /* Position the error message relatively within the form group */
   .form-group {
     position: relative;
+    
   }
   
   /* Styling for error messages */
@@ -96,4 +97,18 @@ body {
     display: block;
     margin-top: 5px;
   }
+  .success {
+    color: #2ecc71;
+    display: block;
+    margin-top: 5px;
+  }
+  .form-group.success input {
+
+    border-color:#2ecc71;
+    border-width: 3px;
+  }
+.form-group.error input{
+    border-color: #e74c3c; 
+    border-width: 3px;
+}
   
